DispatchFlow/force-app/main/default/objects/Assignment_Log__c/Assignment_Log__c.object-meta.xml
<CustomObject>
    <label>Assignment Log</label>
    <pluralLabel>Assignment Logs</pluralLabel>
    <nameField>
        <label>Assignment Number</label>
        <type>AutoNumber</type>
        <displayFormat>AL-{00000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>