DispatchFlow/force-app/main/default/objects/Assignment_Log__c/fields/Candidates_Considered__c.field-meta.xml
<CustomField>
    <fullName>Candidates_Considered__c</fullName>
    <label>Candidates Considered</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>