DispatchFlow/force-app/main/default/objects/Assignment_Log__c/fields/Logged_At__c.field-meta.xml
<CustomField>
    <fullName>Logged_At__c</fullName>
    <label>Logged At</label>
    <type>DateTime</type>
</CustomField>