DispatchFlow/force-app/main/default/objects/Assignment_Log__c/fields/Match_Score__c.field-meta.xml
<CustomField>
    <fullName>Match_Score__c</fullName>
    <label>Match Score</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>