DispatchFlow/force-app/main/default/objects/Assignment_Log__c/fields/Technician__c.field-meta.xml
<CustomField>
    <fullName>Technician__c</fullName>
    <label>Technician</label>
    <type>Lookup</type>
    <referenceTo>Technician__c</referenceTo>
    <relationshipLabel>Assignment Logs</relationshipLabel>
    <relationshipName>Assignment_Logs</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>