DispatchFlow/force-app/main/default/objects/Assignment_Log__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <label>Work Order</label>
    <type>Lookup</type>
    <referenceTo>Work_Order__c</referenceTo>
    <relationshipLabel>Assignment Logs</relationshipLabel>
    <relationshipName>Assignment_Logs</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>